; ModuleID = '/home/carl/AnghaBench/RetroArch/ctr/extr_gpu_old.c_GPU_SetScissorTest.c'
source_filename = "/home/carl/AnghaBench/RetroArch/ctr/extr_gpu_old.c_GPU_SetScissorTest.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GPUREG_SCISSORTEST_MODE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @GPU_SetScissorTest(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca [3 x i32], align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %12 = load i32, i32* %6, align 4
  %13 = getelementptr inbounds [3 x i32], [3 x i32]* %11, i64 0, i64 0
  store i32 %12, i32* %13, align 4
  %14 = load i32, i32* %8, align 4
  %15 = shl i32 %14, 16
  %16 = load i32, i32* %7, align 4
  %17 = and i32 %16, 65535
  %18 = or i32 %15, %17
  %19 = getelementptr inbounds [3 x i32], [3 x i32]* %11, i64 0, i64 1
  store i32 %18, i32* %19, align 4
  %20 = load i32, i32* %10, align 4
  %21 = sub nsw i32 %20, 1
  %22 = shl i32 %21, 16
  %23 = load i32, i32* %9, align 4
  %24 = sub nsw i32 %23, 1
  %25 = and i32 %24, 65535
  %26 = or i32 %22, %25
  %27 = getelementptr inbounds [3 x i32], [3 x i32]* %11, i64 0, i64 2
  store i32 %26, i32* %27, align 4
  %28 = load i32, i32* @GPUREG_SCISSORTEST_MODE, align 4
  %29 = getelementptr inbounds [3 x i32], [3 x i32]* %11, i64 0, i64 0
  %30 = call i32 @GPUCMD_AddIncrementalWrites(i32 %28, i32* %29, i32 3)
  ret void
}

declare dso_local i32 @GPUCMD_AddIncrementalWrites(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
